Updated Asym_SPNI Notebook and ran simulations. Outcome: More realistic and expected results! Also added configuration of pre-training lambda-changes to Trainer.

--- a/src/Notebooks/Asym_SPNI.ipynb
+++ b/src/Notebooks/Asym_SPNI.ipynb
@@ -41,7 +41,7 @@
     "from src.solvers.BendersDecomposition import BendersDecomposition\n",
     "\n",
     "from scripts.compare_po_spo import compare_po_spo\n",
-    "from scripts.setup import gen_data, gen_train_data, setup_po_model, setup_spo_model"
+    "from scripts.setup import gen_data, gen_train_data, setup_po_model, setup_hybrid_spo_model"
    ]
   },
   {
@@ -60,11 +60,6 @@
    "outputs": [],
    "source": [
     "# Define hyperparameters\n",
-    "c_min: float = 1.0\n",
-    "c_max: float = 10.0\n",
-    "d_min: float = 1.0\n",
-    "d_max: float = 10.0\n",
-    "Q = 0.6\n",
     "B = 5\n",
     "network = (6, 8)\n",
     "random_seed = 31\n",
@@ -74,24 +69,24 @@
     "\n",
     "# ML hyperparameters\n",
     "num_features = 5\n",
-    "num_data_samples = 1000\n",
-    "test_size = 0.2\n",
+    "num_train_samples = 1000\n",
+    "validation_size = 0.25\n",
+    "num_test_samples = 100\n",
     "data_loader_batch_size = 32\n",
     "po_epochs = 20\n",
     "spo_epochs = 10\n",
-    "po_lr = .01\n",
-    "spo_lr = .003\n",
-    "sim_data_samples = 100 # number of training data\n",
-    "deg = 3\n",
+    "spo_po_epochs = 0\n",
+    "po_lr = 2e-2\n",
+    "spo_lr = 1e-3\n",
+    "anchor = \"mse\"\n",
+    "lam = .15\n",
+    "deg = 7\n",
     "noise_width = 0.05\n",
     "\n",
     "# Interdictor parameters\n",
-    "benders_max_count = 20\n",
+    "benders_max_count = 50\n",
     "benders_eps = 1e-3\n",
     "lsd = 1e-5\n",
-    "\n",
-    "# Set the normalization parameter as a function of the degree\n",
-    "normalization_constant = {3:10, 5:20, 7:70}[deg]\n",
     "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
@@ -104,30 +99,25 @@
     "cfg = HP()\n",
     "\n",
     "# Change configuration parameters (optional)\n",
-    "cfg.set(\"c_min\", c_min)\n",
-    "cfg.set(\"c_max\", c_max)\n",
-    "cfg.set(\"d_min\", d_min)\n",
-    "cfg.set(\"d_max\", d_max)\n",
-    "cfg.set(\"Q\", Q)\n",
     "cfg.set(\"budget\", B)\n",
     "cfg.set(\"grid_size\", network)\n",
     "cfg.set(\"random_seed\", random_seed)\n",
-    "cfg.set(\"train_seed\", train_seed)\n",
-    "cfg.set(\"test_seed\", test_seed)\n",
     "cfg.set(\"intd_seed\", intd_seed)\n",
     "\n",
     "cfg.set(\"num_features\", num_features)\n",
-    "cfg.set(\"num_data_samples\", num_data_samples)\n",
-    "cfg.set(\"test_size\", test_size)\n",
+    "cfg.set(\"num_train_samples\", num_train_samples)\n",
+    "cfg.set(\"num_test_samples\", num_test_samples)\n",
+    "cfg.set(\"validation_size\", validation_size)\n",
     "cfg.set(\"data_loader_batch_size\", data_loader_batch_size)\n",
     "cfg.set(\"po_epochs\", po_epochs)\n",
     "cfg.set(\"spo_epochs\", spo_epochs)\n",
+    "cfg.set(\"spo_po_epochs\", spo_po_epochs)\n",
     "cfg.set(\"po_lr\", po_lr)\n",
     "cfg.set(\"spo_lr\", spo_lr)\n",
-    "cfg.set(\"sim_data_samples\", sim_data_samples)\n",
+    "cfg.set(\"lam\", lam)\n",
+    "cfg.set(\"anchor\", anchor)\n",
     "cfg.set(\"deg\", deg)\n",
     "cfg.set(\"noise_width\", noise_width)\n",
-    "cfg.set(\"normalization_constant\", normalization_constant)\n",
     "\n",
     "cfg.set(\"benders_max_count\", benders_max_count)\n",
     "cfg.set(\"benders_eps\", benders_eps)\n",
@@ -156,8 +146,8 @@
     "graph = ShortestPathGrid(m,n)\n",
     "opt_model = shortestPathGrb(graph)\n",
     "\n",
-    "# Generate training data\n",
-    "training_data = gen_train_data(cfg, opt_model, seed=train_seed)"
+    "# Generate normalized training and testing data\n",
+    "training_data, testing_data, normalization_constant = gen_train_data(cfg, opt_model)"
    ]
   },
   {
@@ -199,8 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg.set(\"spo_lr\", 0.001)\n",
-    "spo_model = setup_spo_model(\n",
+    "spo_model = setup_hybrid_spo_model(\n",
     "    cfg,\n",
     "    graph,\n",
     "    opt_model,\n",
@@ -225,8 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = gen_data(cfg, seed=test_seed)\n",
-    "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, test_data)"
+    "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, testing_data)"
    ]
   },
   {
@@ -248,6 +236,7 @@
     "_ = ax.boxplot([po_val, spo_val], tick_labels=['PO', 'SPO'],\n",
     "           showmeans=True, meanline=True)   # optional styling\n",
     "ax.set_ylabel(\"Cost increase [%]\")\n",
+    "ax.set_ylim(0,250)\n",
     "ax.grid(True)\n",
     "# plt.legend(['PO', 'SPO'], location='north')\n",
     "\n",
@@ -255,9 +244,7 @@
     "spo_mean = np.mean(spo_val)\n",
     "\n",
     "# std devs\n",
-    "po_std_pop  = np.std(po_val, ddof=0)   # population σ\n",
-    "po_std_samp = np.std(po_val, ddof=1)   # sample s (n-1)\n",
-    "spo_std_pop  = np.std(spo_val, ddof=0)\n",
+    "po_std_samp = np.std(po_val, ddof=1)\n",
     "spo_std_samp = np.std(spo_val, ddof=1)\n",
     "mean_improvement = (po_mean - spo_mean) * 100 / po_mean\n",
     "std_improvement = (po_std_samp - spo_std_samp) * 100 / po_std_samp\n",
@@ -270,18 +257,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "source": [
     "## Compare Different Interdictors\n",
@@ -291,16 +268,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interdictions = gen_data(cfg, seed=intd_seed)"
+    "interdictions = gen_data(cfg, seed=intd_seed, normalization_constant=normalization_constant)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "source": [
     "### Naive Interdictor\n",
@@ -310,19 +287,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compare_sym_intd(cfg, po_model, spo_model, test_data, interdictions):\n",
+    "def compare_sym_intd(cfg, po_model, spo_model, test_data, interdictions, normalization_constant, idx = None):\n",
     "    \"\"\"\n",
     "    Compare the performance of the PO and SPO models using symmetric shortest path interdiction.\n",
     "    This function simulates the interdiction process and evaluates the objective values.\n",
     "    \"\"\"\n",
     "\n",
     "    # Get the number of simulation data samples\n",
-    "    sim_data_samples = cfg.get(\"sim_data_samples\")\n",
-    "    normalization_constant = cfg.get(\"normalization_constant\")\n",
+    "    num_test_samples = cfg.get(\"num_test_samples\")\n",
     "\n",
     "    # Prepare lists to store results\n",
     "    true_objs = []\n",
@@ -330,12 +306,12 @@
     "    spo_objs = []\n",
     "\n",
     "    # Print that the simulation is starting\n",
-    "    print(f\"Running simulation with {sim_data_samples} samples...\")\n",
+    "    print(f\"Running simulation with {num_test_samples} samples...\")\n",
     "\n",
     "    # Iterate through each data sample\n",
-    "    for i in range(sim_data_samples):\n",
+    "    for i in range(num_test_samples) if idx is None else [idx]:\n",
     "        # Store values for the current sample\n",
-    "        feature = test_data[\"features\"][i]\n",
+    "        feature = test_data[\"feats\"][i]\n",
     "        cost = test_data[\"costs\"][i] * normalization_constant\n",
     "        interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
     "        m, n = cfg.get(\"grid_size\")\n",
@@ -354,7 +330,7 @@
     "                                             interdiction_cost=interdiction, \n",
     "                                             max_cnt=cfg.get(\"benders_max_count\"), \n",
     "                                             eps=cfg.get(\"benders_eps\"))\n",
-    "        x_intd, _, _ = interdictor_I.solve(versatile=False)\n",
+    "        x_intd, _, _ = interdictor_I.solve(versatile=False if idx is None else True)\n",
     "\n",
     "        # True shortest path after interdiction\n",
     "        opt_model.setObj(cost + x_intd * interdiction)\n",
@@ -373,17 +349,17 @@
     "        po_objs.append(true_graph(y_po, interdictions=x_intd * interdiction))\n",
     "        spo_objs.append(true_graph(y_spo, interdictions=x_intd * interdiction))\n",
     "\n",
-    "        step = max(1, sim_data_samples // 20)  # ~every 5% (safe for small N)\n",
-    "        if (i % step == 0) or (i == sim_data_samples - 1):\n",
-    "            if i == sim_data_samples - 1:\n",
+    "        step = max(1, num_test_samples // 20)  # ~every 5% (safe for small N)\n",
+    "        if (i % step == 0) or (i == num_test_samples - 1):\n",
+    "            if i == num_test_samples - 1:\n",
     "                done, pct = 20, 100                      # final tick\n",
     "            else:\n",
-    "                done = (i * 20) // sim_data_samples      # 0..20 “=”\n",
+    "                done = (i * 20) // num_test_samples      # 0..20 “=”\n",
     "                pct  = done * 5                          # 0,5,10,...,95\n",
     "\n",
     "            sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
     "            sys.stdout.flush()\n",
-    "            if i == sim_data_samples - 1:\n",
+    "            if i == num_test_samples - 1:\n",
     "                sys.stdout.write('\\n')\n",
     "\n",
     "\n",
@@ -398,16 +374,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_pred_sym_intd = compare_sym_intd(cfg, po_model, spo_model, test_data, interdictions)"
+    "all_pred_sym_intd = compare_sym_intd(cfg, po_model, spo_model, testing_data, interdictions, normalization_constant)\n",
+    "# compare_sym_intd(cfg, po_model, spo_model, testing_data, interdictions, normalization_constant, idx=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "source": [
     "### Knowledgeable Interdictor"
@@ -416,44 +393,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Run for each model (e.g., PO, SPO)\n",
-    "pred_model = po_model\n",
-    "def compare_asym_intd(cfg, pred_model, test_data, interdictions):\n",
+    "def compare_asym_intd(cfg, test_data, interdictions, normalization_constant, pred_model = None):\n",
     "    \"\"\"\n",
     "    Compare the performance of the predicted model with the true model\n",
     "    using asymmetric shortest path interdiction.\n",
     "    \"\"\" \n",
     "\n",
     "    # Get the number of simulation data samples\n",
-    "    sim_data_samples = cfg.get(\"sim_data_samples\")\n",
-    "    normalization_constant = cfg.get(\"normalization_constant\")\n",
+    "    num_test_samples = cfg.get(\"num_test_samples\")\n",
     "\n",
     "    # Print that the simulation is starting\n",
-    "    print(f\"Running simulation with {sim_data_samples} samples...\")\n",
+    "    print(f\"Running simulation with {num_test_samples} samples...\")\n",
     "\n",
     "    # Prepare lists to store results\n",
     "    true_objs = []\n",
     "    est_objs = []\n",
     "\n",
     "    # Iterate through each data sample\n",
-    "    for i in range(sim_data_samples):\n",
+    "    for i in range(num_test_samples):\n",
     "        # Store values for the current sample\n",
-    "        feature = test_data[\"features\"][i]\n",
     "        cost = test_data[\"costs\"][i] * normalization_constant\n",
     "        interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
     "        m, n = cfg.get(\"grid_size\")\n",
+    "\n",
+    "        # Compute estimated cost if an estimator is provided. Otherwise use the true costs\n",
+    "        if pred_model is not None:\n",
+    "            feature = test_data[\"feats\"][i]\n",
+    "            pred_cost = pred_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "        else:\n",
+    "            pred_cost = cost\n",
     "        \n",
     "        # Create graph with true costs and opt_model for estimated shortest path\n",
     "        true_graph = ShortestPathGrid(m, n, cost=cost)\n",
     "        est_opt_model = shortestPathGrb(true_graph)\n",
-    "\n",
-    "        # Update the estimated costs\n",
-    "        est_cost = pred_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
-    "        est_opt_model.setObj(est_cost)\n",
+    "        est_opt_model.setObj(pred_cost)\n",
     "\n",
     "        # Solutions with information asymmetry\n",
     "        asym_interdictor = AsymmetricSPNI(\n",
@@ -461,7 +438,7 @@
     "            budget=cfg.get(\"budget\"), \n",
     "            true_costs=cost, \n",
     "            true_delays=interdiction, \n",
-    "            est_costs=est_cost, \n",
+    "            est_costs=pred_cost, \n",
     "            est_delays=interdiction, \n",
     "            lsd=cfg.get(\"lsd\")\n",
     "        )\n",
@@ -472,7 +449,7 @@
     "        # y_true, _ = opt_model.solve()\n",
     "\n",
     "        # Estimated shortest path after interdiction\n",
-    "        opt_model.setObj(est_cost + x_intd * interdiction)\n",
+    "        opt_model.setObj(pred_cost + x_intd * interdiction)\n",
     "        y_est, _ = opt_model.solve()\n",
     "\n",
     "        # Store the results\n",
@@ -480,17 +457,17 @@
     "        est_objs.append(true_graph(y_est, interdictions=x_intd * interdiction))\n",
     "\n",
     "        # Print progress\n",
-    "        step = max(1, sim_data_samples // 20)  # ~every 5% (safe for small N)\n",
-    "        if (i % step == 0) or (i == sim_data_samples - 1):\n",
-    "            if i == sim_data_samples - 1:\n",
+    "        step = max(1, num_test_samples // 20)  # ~every 5% (safe for small N)\n",
+    "        if (i % step == 0) or (i == num_test_samples - 1):\n",
+    "            if i == num_test_samples - 1:\n",
     "                done, pct = 20, 100                      # final tick\n",
     "            else:\n",
-    "                done = (i * 20) // sim_data_samples      # 0..20 “=”\n",
+    "                done = (i * 20) // num_test_samples      # 0..20 “=”\n",
     "                pct  = done * 5                          # 0,5,10,...,95\n",
     "\n",
     "            sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
     "            sys.stdout.flush()\n",
-    "            if i == sim_data_samples - 1:\n",
+    "            if i == num_test_samples - 1:\n",
     "                sys.stdout.write('\\n')\n",
     "\n",
     "    # Evaluate performance\n",
@@ -504,11 +481,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_pred_asym_intd = compare_asym_intd(cfg, testing_data, interdictions, normalization_constant)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "po_pred_asym_intd = compare_asym_intd(cfg, po_model, test_data, interdictions)"
+    "po_pred_asym_intd = compare_asym_intd(cfg, testing_data, interdictions, normalization_constant, po_model)"
    ]
   },
   {
@@ -518,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spo_pred_asym_intd = compare_asym_intd(cfg, spo_model, test_data, interdictions)"
+    "spo_pred_asym_intd = compare_asym_intd(cfg, testing_data, interdictions, normalization_constant, spo_model)"
    ]
   },
   {
@@ -542,7 +529,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[1 if sym - asym > eps else 0 for sym, asym in zip(all_pred_sym_intd['po_objective'], po_pred_asym_intd)]"
+    "[(asym - sym).item() for sym, asym in zip(all_pred_sym_intd['spo_objective'], spo_pred_asym_intd)]\n",
+    "# print(all_pred_sym_intd['true_objective'][0])\n",
+    "# print(no_pred_asym_intd[0])"
    ]
   },
   {
@@ -567,9 +556,6 @@
     "# po_spo_sym = (spo_pred_sym_intd-po_pred_sym_intd)/po_pred_sym_intd\n",
     "# po_spo_asym = (spo_pred_asym_intd-po_pred_asym_intd)/po_pred_asym_intd\n",
     "\n",
-    "# Store reused values\n",
-    "normalization_constant = cfg.get(\"normalization_constant\")\n",
-    "\n",
     "# Prepare no-interdiction results for printing\n",
     "true_mean = np.array(true_objs).mean() * normalization_constant\n",
     "po_mean = np.array(po_objs).mean() * normalization_constant\n",
@@ -577,7 +563,7 @@
     "\n",
     "# Print the results in a table format\n",
     "rows = [\n",
-    "    [\"Oracle\", f\"{true_mean:.2f}\", f\"{all_pred_sym_intd['true_objective'].mean():.2f}\", f\"{np.nan:.2f}\"],\n",
+    "    [\"Oracle\", f\"{true_mean:.2f}\", f\"{all_pred_sym_intd['true_objective'].mean():.2f}\", f\"{no_pred_asym_intd.mean():.2f}\"],\n",
     "    [\"PO\", f\"{po_mean:.2f} \",  f\"{all_pred_sym_intd['po_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{po_pred_asym_intd.mean():.2f} ({np.nan:.2f}%)\"],\n",
     "    [\"SPO\", f\"{spo_mean:.2f} \", f\"{all_pred_sym_intd['spo_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{spo_pred_asym_intd.mean():.2f} ({np.nan:.2f}%)\"],\n",
     "    [\"Improvement\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\"]\n",
@@ -586,10 +572,11 @@
     "\n",
     "# Boxplot of the true objectives for both interdiction methods\n",
     "fig, ax = plt.subplots(figsize=(6,4))\n",
-    "_ = ax.boxplot([all_pred_sym_intd[\"true_objective\"], po_pred_asym_intd],\n",
-    "           tick_labels=['Symmetric', 'Asymmetric'],\n",
+    "_ = ax.boxplot([all_pred_sym_intd[\"po_objective\"], all_pred_sym_intd[\"spo_objective\"], po_pred_asym_intd, spo_pred_asym_intd],\n",
+    "           tick_labels=['Symmetric PO', 'Symmetric SPO', 'Asymmetric PO', 'Asymmetric SPO'],\n",
     "           showmeans=True, meanline=True)\n",
-    "ax.set_ylabel(\"Interdicted Shortest Path Length\")"
+    "ax.set_ylabel(\"Interdicted Shortest Path Length\")\n",
+    "ax.grid(True)"
    ]
   },
   {
@@ -607,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 0\n",
+    "idx = 5\n",
     "\n",
     "# Create figure\n",
     "fig, ax = plt.subplots(1,3,figsize=(18,6))\n",
@@ -615,9 +602,8 @@
     "print(\"----------------------------\")\n",
     "\n",
     "# Store constants that will be reused\n",
-    "normalization_constant = cfg.get(\"normalization_constant\")\n",
-    "cost = test_data['costs'][idx] * normalization_constant\n",
-    "features = test_data['features'][idx]\n",
+    "cost = testing_data['costs'][idx] * normalization_constant\n",
+    "features = testing_data['feats'][idx]\n",
     "interdiction = interdictions['costs'][idx] * normalization_constant\n",
     "\n",
     "# Create the true graph and models\n",
