--- a/src/Notebooks/Robust_SPO.ipynb
+++ b/src/Notebooks/Robust_SPO.ipynb
@@ -53,11 +53,6 @@
    "outputs": [],
    "source": [
     "# Define hyperparameters\n",
-    "c_min: float = 1.0\n",
-    "c_max: float = 10.0\n",
-    "d_min: float = 1.0\n",
-    "d_max: float = 10.0\n",
-    "Q = 0.6\n",
     "B = 5\n",
     "network = (6, 8)\n",
     "random_seed = 31\n",
@@ -85,9 +80,6 @@
     "benders_eps = 1e-3\n",
     "lsd = 1e-5\n",
     "\n",
-    "# # Set the normalization parameter as a function of the degree\n",
-    "# normalization_constant = {3:10, 5:20, 7:70}[deg]\n",
-    "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
     "random.seed(random_seed)\n",
@@ -99,11 +91,6 @@
     "cfg = HP()\n",
     "\n",
     "# Change configuration parameters (optional)\n",
-    "cfg.set(\"c_min\", c_min)\n",
-    "cfg.set(\"c_max\", c_max)\n",
-    "cfg.set(\"d_min\", d_min)\n",
-    "cfg.set(\"d_max\", d_max)\n",
-    "cfg.set(\"Q\", Q)\n",
     "cfg.set(\"budget\", B)\n",
     "cfg.set(\"grid_size\", network)\n",
     "cfg.set(\"random_seed\", random_seed)\n",
@@ -143,7 +130,7 @@
     "graph = ShortestPathGrid(m,n)\n",
     "opt_model = shortestPathGrb(graph)\n",
     "\n",
-    "# Generate training data\n",
+    "# Generate normalized training and testing data\n",
     "training_data, testing_data, normalization_constant = gen_train_data(cfg, opt_model)"
    ]
   },
@@ -253,7 +240,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_data = gen_data(cfg, seed=intd_seed)\n",
     "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, testing_data)"
    ]
   },
@@ -284,9 +270,7 @@
     "spo_mean = np.mean(spo_val)\n",
     "\n",
     "# std devs\n",
-    "po_std_pop  = np.std(po_val, ddof=0)   # population σ\n",
-    "po_std_samp = np.std(po_val, ddof=1)   # sample s (n-1)\n",
-    "spo_std_pop  = np.std(spo_val, ddof=0)\n",
+    "po_std_samp = np.std(po_val, ddof=1)\n",
     "spo_std_samp = np.std(spo_val, ddof=1)\n",
     "mean_improvement = (po_mean - spo_mean) * 100 / po_mean\n",
     "std_improvement = (po_std_samp - spo_std_samp) * 100 / po_std_samp\n",
