Introduced 100 interdictions with 10 selections per sample again. Asym_SPNI.ipynb runs successfully and produces results for paper.

--- a/src/Notebooks/Robust_SPO.ipynb
+++ b/src/Notebooks/Robust_SPO.ipynb
@@ -39,10 +39,10 @@
     "from src.models.ShortestPathGrb import shortestPathGrb\n",
     "from src.models.ShortestPathGrid import ShortestPathGrid\n",
     "from src.solvers.BendersDecomposition import BendersDecomposition\n",
-    "from models.CalibrationTrainer import CalibratorTrainer\n",
+    "from src.models.CalibrationTrainer import CalibratorTrainer\n",
     "\n",
-    "from scripts.compare_po_spo import compare_po_spo\n",
-    "from scripts.setup import gen_data, gen_train_data, setup_po_model, setup_spo_model, setup_hybrid_spo_model"
+    "from src.scripts.compare_po_spo import compare_po_spo\n",
+    "from src.scripts.setup import gen_data, gen_train_data, setup_po_model, setup_spo_model, setup_hybrid_spo_model"
    ]
   },
   {
@@ -52,75 +52,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define hyperparameters\n",
-    "B = 5\n",
-    "network = (6, 8)\n",
-    "random_seed = 31\n",
-    "intd_seed = 53\n",
+    "# # Define hyperparameters\n",
+    "# B = 5\n",
+    "# network = (6, 8)\n",
+    "# random_seed = 31\n",
+    "# intd_seed = 53\n",
+    "# data_loader_seed = 17\n",
     "\n",
-    "# ML hyperparameters\n",
-    "num_features = 5\n",
-    "num_train_samples = 1000\n",
-    "validation_size = 0.25\n",
-    "num_test_samples = 200\n",
-    "data_loader_batch_size = 32\n",
-    "po_epochs = 90\n",
-    "spo_epochs = 50\n",
-    "spo_po_epochs = 0\n",
-    "po_lr = 2e-2\n",
-    "spo_lr = 1e-3\n",
-    "spo_po_lr = po_lr\n",
-    "anchor = \"mse\"\n",
-    "lam = .15\n",
-    "deg = 7\n",
-    "noise_width = 0.05\n",
+    "# # ML hyperparameters\n",
+    "# num_features = 5\n",
+    "# num_train_samples = 600\n",
+    "# validation_size = 100\n",
+    "# num_test_samples = 200\n",
+    "# data_loader_batch_size = 32\n",
+    "# po_epochs = 60\n",
+    "# spo_epochs = 20\n",
+    "# po_lr = 1e-2\n",
+    "# spo_lr = 1e-3\n",
+    "# lam = .15\n",
+    "# deg = 7\n",
+    "# anchor = \"mse\"\n",
+    "# spo_po_epochs = 0\n",
+    "# noise_width = 0.05\n",
     "\n",
-    "# Interdictor parameters\n",
-    "benders_max_count = 50\n",
-    "benders_eps = 1e-3\n",
-    "lsd = 1e-5\n",
+    "# # Interdictor parameters\n",
+    "# benders_max_count = 50\n",
+    "# benders_eps = 1e-3\n",
+    "# lsd = 1e-5\n",
     "\n",
-    "# Set the random seed for reproducibility\n",
-    "np.random.seed(random_seed)\n",
-    "random.seed(random_seed)\n",
-    "torch.manual_seed(random_seed)\n",
-    "if torch.cuda.is_available():\n",
-    "    torch.cuda.manual_seed_all(random_seed)\n",
+    "\n",
     "\n",
     "# Initialize the configuration class\n",
     "cfg = HP()\n",
     "\n",
-    "# Change configuration parameters (optional)\n",
-    "cfg.set(\"budget\", B)\n",
-    "cfg.set(\"grid_size\", network)\n",
-    "cfg.set(\"random_seed\", random_seed)\n",
-    "cfg.set(\"intd_seed\", intd_seed)\n",
+    "# Set the random seed for reproducibility\n",
+    "np.random.seed(cfg.get(\"random_seed\"))\n",
+    "random.seed(cfg.get(\"random_seed\"))\n",
+    "torch.manual_seed(cfg.get(\"random_seed\"))\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed_all(cfg.get(\"random_seed\"))\n",
     "\n",
-    "cfg.set(\"num_features\", num_features)\n",
-    "cfg.set(\"num_train_samples\", num_train_samples)\n",
-    "cfg.set(\"num_test_samples\", num_test_samples)\n",
-    "cfg.set(\"validation_size\", validation_size)\n",
-    "cfg.set(\"data_loader_batch_size\", data_loader_batch_size)\n",
-    "cfg.set(\"po_epochs\", po_epochs)\n",
-    "cfg.set(\"spo_epochs\", spo_epochs)\n",
-    "cfg.set(\"spo_po_epochs\", spo_po_epochs)\n",
-    "cfg.set(\"po_lr\", po_lr)\n",
-    "cfg.set(\"spo_lr\", spo_lr)\n",
-    "cfg.set(\"spo_po_lr\", spo_po_lr)\n",
-    "cfg.set(\"lam\", lam)\n",
-    "cfg.set(\"anchor\", anchor)\n",
-    "cfg.set(\"deg\", deg)\n",
-    "cfg.set(\"noise_width\", noise_width)\n",
+    "# # Change configuration parameters (optional)\n",
+    "# cfg.set(\"budget\", B)\n",
+    "# cfg.set(\"grid_size\", network)\n",
+    "# cfg.set(\"random_seed\", random_seed)\n",
+    "# cfg.set(\"intd_seed\", intd_seed)\n",
+    "# cfg.set(\"data_loader_seed\", data_loader_seed)\n",
     "\n",
-    "cfg.set(\"benders_max_count\", benders_max_count)\n",
-    "cfg.set(\"benders_eps\", benders_eps)\n",
-    "cfg.set(\"lsd\", lsd)\n"
+    "# cfg.set(\"num_features\", num_features)\n",
+    "# cfg.set(\"num_train_samples\", num_train_samples)\n",
+    "# cfg.set(\"num_test_samples\", num_test_samples)\n",
+    "# cfg.set(\"validation_size\", validation_size)\n",
+    "# cfg.set(\"data_loader_batch_size\", data_loader_batch_size)\n",
+    "# cfg.set(\"po_epochs\", po_epochs)\n",
+    "# cfg.set(\"spo_epochs\", spo_epochs)\n",
+    "# cfg.set(\"spo_po_epochs\", spo_po_epochs)\n",
+    "# cfg.set(\"po_lr\", po_lr)\n",
+    "# cfg.set(\"spo_lr\", spo_lr)\n",
+    "# cfg.set(\"lam\", lam)\n",
+    "# cfg.set(\"anchor\", anchor)\n",
+    "# cfg.set(\"deg\", deg)\n",
+    "# cfg.set(\"noise_width\", noise_width)\n",
+    "\n",
+    "# cfg.set(\"benders_max_count\", benders_max_count)\n",
+    "# cfg.set(\"benders_eps\", benders_eps)\n",
+    "# cfg.set(\"lsd\", lsd)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg.get(\"grid_size\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,23 +159,6 @@
     "    opt_model,\n",
     "    training_data,\n",
     "    versatile=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spo_po_model = setup_po_model(\n",
-    "    cfg,\n",
-    "    graph,\n",
-    "    opt_model,\n",
-    "    training_data,\n",
-    "    versatile=True,\n",
-    "    train_type=\"spo\"\n",
     ")"
    ]
   },
@@ -180,7 +175,6 @@
     "    opt_model,\n",
     "    training_data,\n",
     "    versatile=True,\n",
-    "    # transfer_model=spo_po_model\n",
     ")"
    ]
   },
@@ -191,14 +185,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: - Plot cost/est. cost eror\n",
-    "#       - Create example to see what costs look like here\n",
-    "import pyepo\n",
-    "print(f\"log_s parameter before Calibrator fitting: {spo_model.log_s.item()}\") \n",
-    "calibration_trainer = CalibratorTrainer(spo_model)\n",
-    "calibration_trainer.align_scale_ols(training_data['train_loader'])\n",
-    "print(f\"log_s parameter after Calibrator fitting:  {spo_model.log_s.item()}\")\n",
-    "print(f\"New SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")"
+    "# # TODO: - Plot cost/est. cost eror\n",
+    "# #       - Create example to see what costs look like here\n",
+    "# import pyepo\n",
+    "# print(f\"log_s parameter before Calibrator fitting: {spo_model.log_s.item()}\") \n",
+    "# calibration_trainer = CalibratorTrainer(spo_model)\n",
+    "# calibration_trainer.align_scale_ols(training_data['train_loader'])\n",
+    "# print(f\"log_s parameter after Calibrator fitting:  {spo_model.log_s.item()}\")\n",
+    "# print(f\"New SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")"
    ]
   },
   {
@@ -289,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interdictions = gen_data(cfg, seed=intd_seed, normalization_constant=normalization_constant)"
+    "interdictions = gen_data(cfg, seed=cfg.get(\"intd_seed\"), normalization_constant=normalization_constant)"
    ]
   },
   {
@@ -546,19 +540,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(true_interdiction['true_objective'][60])\n",
-    "print(true_interdiction['est_objective'][60])\n",
-    "print(po_interdiction['true_objective'][60])\n",
-    "print(spo_interdiction['true_objective'][60])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "idx = 0\n",
     "for po , true in zip(po_interdiction['true_objective'], true_interdiction['true_objective']):\n",
     "    if true < po:\n",
@@ -569,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "Takeaway from above: If we post-process the trained cost predictor with SPO, we can achieve a better model and better interdiction (robust) performance!"
@@ -619,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "source": [
     "## Single Examples"
@@ -628,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
