--- a/src/Notebooks/Asym_SPNI.ipynb
+++ b/src/Notebooks/Asym_SPNI.ipynb
@@ -61,74 +61,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define hyperparameters\n",
-    "B = 5\n",
-    "network = (6, 8)\n",
-    "random_seed = 31\n",
-    "train_seed = 31\n",
-    "test_seed = 42\n",
-    "intd_seed = 53\n",
-    "\n",
-    "# ML hyperparameters\n",
-    "num_features = 5\n",
-    "num_train_samples = 600\n",
-    "validation_size = 100\n",
-    "num_test_samples = 100\n",
-    "data_loader_batch_size = 32\n",
-    "po_epochs = 60\n",
-    "spo_epochs = 20\n",
-    "po_lr = 2e-2\n",
-    "spo_lr = 1e-3\n",
-    "lam = .15\n",
-    "deg = 7\n",
-    "anchor = \"mse\"\n",
-    "spo_po_epochs = 0\n",
-    "noise_width = 0.05\n",
-    "\n",
-    "# Interdictor parameters\n",
-    "benders_max_count = 50\n",
-    "benders_eps = 1e-3\n",
-    "lsd = 1e-5\n",
-    "\n",
-    "# Set the random seed for reproducibility\n",
-    "np.random.seed(random_seed)\n",
-    "random.seed(random_seed)\n",
-    "torch.manual_seed(random_seed)\n",
-    "if torch.cuda.is_available():\n",
-    "    torch.cuda.manual_seed_all(random_seed)\n",
-    "\n",
     "# Initialize the configuration class\n",
     "cfg = HP()\n",
     "\n",
-    "# Change configuration parameters (optional)\n",
-    "cfg.set(\"budget\", B)\n",
-    "cfg.set(\"grid_size\", network)\n",
-    "cfg.set(\"random_seed\", random_seed)\n",
-    "cfg.set(\"intd_seed\", intd_seed)\n",
-    "\n",
-    "cfg.set(\"num_features\", num_features)\n",
-    "cfg.set(\"num_train_samples\", num_train_samples)\n",
-    "cfg.set(\"num_test_samples\", num_test_samples)\n",
-    "cfg.set(\"validation_size\", validation_size)\n",
-    "cfg.set(\"data_loader_batch_size\", data_loader_batch_size)\n",
-    "cfg.set(\"po_epochs\", po_epochs)\n",
-    "cfg.set(\"spo_epochs\", spo_epochs)\n",
-    "cfg.set(\"spo_po_epochs\", spo_po_epochs)\n",
-    "cfg.set(\"po_lr\", po_lr)\n",
-    "cfg.set(\"spo_lr\", spo_lr)\n",
-    "cfg.set(\"lam\", lam)\n",
-    "cfg.set(\"anchor\", anchor)\n",
-    "cfg.set(\"deg\", deg)\n",
-    "cfg.set(\"noise_width\", noise_width)\n",
-    "\n",
-    "cfg.set(\"benders_max_count\", benders_max_count)\n",
-    "cfg.set(\"benders_eps\", benders_eps)\n",
-    "cfg.set(\"lsd\", lsd)\n"
+    "# Set the random seed for reproducibility\n",
+    "np.random.seed(cfg.get(\"random_seed\"))\n",
+    "random.seed(cfg.get(\"random_seed\"))\n",
+    "torch.manual_seed(cfg.get(\"random_seed\"))\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed_all(cfg.get(\"random_seed\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg.set(\"num_scenarios\", 10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Generate Network Data\n",
@@ -138,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Predict-then-Optimize"
@@ -163,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## Smart Predict-then-Optimize with OptNet"
@@ -187,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,21 +159,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Old SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")\n",
-    "print(f\"log_s parameter before Calibrator fitting: {spo_model.log_s.item()}\") \n",
-    "calibration_trainer = CalibratorTrainer(spo_model)\n",
-    "calibration_trainer.align_scale_ols(training_data['train_loader'])\n",
-    "print(f\"log_s parameter after Calibrator fitting:  {spo_model.log_s.item()}\")\n",
-    "print(f\"New SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")"
+    "# print(f\"Old SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")\n",
+    "# print(f\"log_s parameter before Calibrator fitting: {spo_model.log_s.item()}\") \n",
+    "# calibration_trainer = CalibratorTrainer(spo_model)\n",
+    "# calibration_trainer.align_scale_ols(training_data['train_loader'])\n",
+    "# print(f\"log_s parameter after Calibrator fitting:  {spo_model.log_s.item()}\")\n",
+    "# print(f\"New SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Compare PO and SPO\n",
@@ -227,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "## Compare Different Interdictors\n",
@@ -285,16 +241,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interdictions = gen_data(cfg, seed=intd_seed, normalization_constant=normalization_constant)"
+    "interdictions = gen_data(cfg, seed=cfg.get(\"intd_seed\"), normalization_constant=normalization_constant)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comparison of different means of costs to show similar \n",
+    "print(f\"Mean value comparison:\")\n",
+    "print(f\"----------------------\")\n",
+    "print(f\"Test:  {testing_data['costs'].mean():.7f}\")\n",
+    "print(f\"Train: {training_data['train_loader'].dataset.costs.mean():.7f}\")\n",
+    "print(f\"Intd:  {interdictions['costs'].mean():.7f}\")\n",
+    "print(f\"PO:    {po_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).mean().item():.7f}\")\n",
+    "print(f\"SPO+:  {spo_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).mean().item():.7f}\")\n",
+    "\n",
+    "print(f\"\\nStd value comparison:\")\n",
+    "print(f\"----------------------\")\n",
+    "print(f\"Test:  {testing_data['costs'].std():.7f}\")\n",
+    "print(f\"Train: {training_data['train_loader'].dataset.costs.std():.7f}\")\n",
+    "print(f\"Intd:  {interdictions['costs'].std():.7f}\")\n",
+    "print(f\"PO:    {po_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).std().item():.7f}\")\n",
+    "print(f\"SPO+:  {spo_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).std().item():.7f}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "source": [
     "### Naive Interdictor\n",
@@ -304,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "22",
    "metadata": {},
    "source": [
     "### Knowledgeable Interdictor"
@@ -410,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,8 +447,8 @@
     "        # y_true, _ = opt_model.solve()\n",
     "\n",
     "        # Estimated shortest path after interdiction\n",
-    "        opt_model.setObj(pred_cost + x_intd * interdiction)\n",
-    "        y_est, _ = opt_model.solve()\n",
+    "        est_opt_model.setObj(pred_cost + x_intd * interdiction)\n",
+    "        y_est, _ = est_opt_model.solve()\n",
     "\n",
     "        # Store the results\n",
     "        # true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
@@ -498,7 +479,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_wrong_asym_intd(cfg, test_data, interdictions, normalization_constant, true_model, false_model):\n",
+    "    \"\"\"\n",
+    "    Evader uses true model and interdictor uses asymmetric SPNI assuming false model.\n",
+    "    \"\"\" \n",
+    "\n",
+    "    # Get the number of simulation data samples\n",
+    "    num_test_samples = cfg.get(\"num_test_samples\")\n",
+    "\n",
+    "    # Print that the simulation is starting\n",
+    "    print(f\"Running simulation with {num_test_samples} samples...\")\n",
+    "\n",
+    "    # Prepare lists to store results\n",
+    "    true_objs = []\n",
+    "    est_objs = []\n",
+    "\n",
+    "    # Iterate through each data sample\n",
+    "    for i in range(num_test_samples):\n",
+    "        # Store values for the current sample\n",
+    "        cost = test_data[\"costs\"][i] * normalization_constant\n",
+    "        interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
+    "        m, n = cfg.get(\"grid_size\")\n",
+    "\n",
+    "        # Compute estimated cost if an estimator is provided. Otherwise use the true costs\n",
+    "        feature = test_data[\"feats\"][i]\n",
+    "        true_pred_cost = true_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "        false_pred_cost = false_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "\n",
+    "        # Create graph with true costs and opt_model for estimated shortest path\n",
+    "        true_graph = ShortestPathGrid(m, n, cost=cost)\n",
+    "        est_opt_model = shortestPathGrb(true_graph)\n",
+    "\n",
+    "        # Solutions with information asymmetry\n",
+    "        asym_interdictor = AsymmetricSPNI(\n",
+    "            true_graph, \n",
+    "            budget=cfg.get(\"budget\"), \n",
+    "            true_costs=cost, \n",
+    "            true_delays=interdiction, \n",
+    "            est_costs=false_pred_cost, \n",
+    "            est_delays=interdiction, \n",
+    "            lsd=cfg.get(\"lsd\")\n",
+    "        )\n",
+    "        x_intd, _ = asym_interdictor.solve()\n",
+    "\n",
+    "        # # True shortest path after interdiction\n",
+    "        # opt_model.setObj(cost + x_intd * interdiction)\n",
+    "        # y_true, _ = opt_model.solve()\n",
+    "\n",
+    "        # Estimated shortest path after interdiction\n",
+    "        est_opt_model.setObj(true_pred_cost + x_intd * interdiction)\n",
+    "        y_est, _ = est_opt_model.solve()\n",
+    "\n",
+    "        # Store the results\n",
+    "        # true_objs.append(true_graph(y_true, interdictions=x_intd * interdiction))\n",
+    "        est_objs.append(true_graph(y_est, interdictions=x_intd * interdiction))\n",
+    "\n",
+    "        # Print progress\n",
+    "        step = max(1, num_test_samples // 20)  # ~every 5% (safe for small N)\n",
+    "        if (i % step == 0) or (i == num_test_samples - 1):\n",
+    "            if i == num_test_samples - 1:\n",
+    "                done, pct = 20, 100                      # final tick\n",
+    "            else:\n",
+    "                done = (i * 20) // num_test_samples      # 0..20 “=”\n",
+    "                pct  = done * 5                          # 0,5,10,...,95\n",
+    "\n",
+    "            sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
+    "            sys.stdout.flush()\n",
+    "            if i == num_test_samples - 1:\n",
+    "                sys.stdout.write('\\n')\n",
+    "\n",
+    "    # Evaluate performance\n",
+    "    # return {\n",
+    "    #     \"true_objective\": np.array(true_objs),\n",
+    "    #     \"estimated_objective\": np.array(est_objs),\n",
+    "    # }\n",
+    "    return np.array(est_objs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +593,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_spo_false_po_asym_intd = compare_wrong_asym_intd(cfg, testing_data, interdictions, normalization_constant, spo_model, po_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_po_false_spo_asym_intd = compare_wrong_asym_intd(cfg, testing_data, interdictions, normalization_constant, po_model, spo_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,12 +667,12 @@
     "\n",
     "# Print the results in a table format\n",
     "rows = [\n",
-    "    [\"Oracle\", f\"{true_mean:.2f}\", f\"{all_pred_sym_intd['true_objective'].mean():.2f}\", f\"{no_pred_asym_intd.mean():.2f}\"],\n",
-    "    [\"PO\", f\"{po_mean:.2f} \",  f\"{all_pred_sym_intd['po_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{po_pred_asym_intd_I.mean():.2f} ({np.nan:.2f}%)\"],\n",
-    "    [\"SPO\", f\"{spo_mean:.2f} \", f\"{all_pred_sym_intd['spo_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{spo_pred_asym_intd_I.mean():.2f} ({np.nan:.2f}%)\"],\n",
-    "    [\"Improvement\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\"]\n",
+    "    [\"Oracle\", f\"{true_mean:.2f}\", f\"{all_pred_sym_intd['true_objective'].mean():.2f}\", f\"{no_pred_asym_intd.mean():.2f}\", f\"N/A\"],\n",
+    "    [\"PO\", f\"{po_mean:.2f} \",  f\"{all_pred_sym_intd['po_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{po_pred_asym_intd_I.mean():.2f} ({np.nan:.2f}%)\", f\"{true_po_false_spo_asym_intd.mean():.2f} (Evader=PO, Intd=SPO)\"],\n",
+    "    [\"SPO\", f\"{spo_mean:.2f} \", f\"{all_pred_sym_intd['spo_objective'].mean():.2f} ({np.nan:.2f}%)\", f\"{spo_pred_asym_intd_I.mean():.2f} ({np.nan:.2f}%)\", f\"{true_spo_false_po_asym_intd.mean():.2f} (Evader=SPO, Intd=PO)\"],\n",
+    "    [\"Improvement\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\", f\"{np.nan:.2f}%\"]\n",
     "]\n",
-    "print(tabulate(rows, headers=[\"Predictor\", \"No Interdictor\", \"Sym. Interdictor\", \"Asym. Interdictor\"], tablefmt=\"github\"))\n",
+    "print(tabulate(rows, headers=[\"Predictor\", \"No Interdictor\", \"Sym. Interdictor\", \"Asym. Interdictor\", \"Asym. Intd. (Row is True Evader)\"], tablefmt=\"github\"))\n",
     "\n",
     "# Boxplot of the true objectives for both interdiction methods\n",
     "fig, ax = plt.subplots(figsize=(6,4))\n",
@@ -600,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "33",
    "metadata": {},
    "source": [
     "## Comparison with Single Instances"
@@ -609,11 +694,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 5\n",
+    "idx = 1\n",
     "\n",
     "# Create figure\n",
     "fig, ax = plt.subplots(1,3,figsize=(18,6))\n",
@@ -662,7 +747,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po_cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
