Updated config file and removed overhead from notebooks.

--- a/src/Notebooks/Robust_SPO.ipynb
+++ b/src/Notebooks/Robust_SPO.ipynb
@@ -747,7 +747,76 @@
    "id": "36",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "xon = np.array([4.2703, 3.9413, 4.0144, 3.8332, 4.7098, 5.4733, 5.0940, 4.2866, 4.6499, 4.6499])\n",
+    "print(f\"Oracle & no intd.: {xon.mean()} +/- {xon.std()}\")\n",
+    "xos = np.array([6.8659, 6.7464, 6.4299, 6.1716, 7.4298, 7.5481, 6.9647, 6.6544, 7.2118, 7.2118])\n",
+    "print(f\"Oracle & sym intd: {xos.mean()} +/- {xos.std()}\")\n",
+    "xoa = np.array([6.8728, 7.2865, 6.9242, 6.1716, 7.4298, 7.5481, 7.5056, 6.6649, 7.2118, 7.2118])\n",
+    "print(f\"Oracle & asym intd: {xoa.mean()} +/- {xoa.std()}\")\n",
+    "xpn = np.array([4.7798, 4.1016, 4.1909, 4.2144, 5.1734, 6.0128, 5.2856, 4.8201, 4.8097, 4.8097])\n",
+    "print(f\"PO & no intd: {xpn.mean()} +/- {xpn.std()}\")\n",
+    "xps = np.array([7.2351, 6.9740, 6.6728, 6.6493, 7.9041, 8.2390, 7.7915, 7.1620, 7.3979, 7.3979])\n",
+    "print(f\"PO & sym intd: {xps.mean()} +/- {xps.std()}\")\n",
+    "xpa = np.array([8.0121, 5.7358, 6.9242, 7.1088, 8.3745, 9.1074, 8.2071, 7.9188, 7.7143, 7.7143])\n",
+    "print(f\"PO & asym intd: {xpa.mean()} +/- {xpa.std()}\")\n",
+    "xsn = np.array([4.3636, 4.0688, 4.1207, 3.9578, 4.8607, 5.5872, 5.2111, 4.3534, 4.7325, 4.7325])\n",
+    "print(f\"SPO & no intd: {xsn.mean()} +/- {xsn.std()}\")\n",
+    "xss = np.array([7.4021, 7.1997, 6.7817, 6.6076, 7.9676, 7.9900, 8.0484, 7.2554, 7.6427, 7.6427])\n",
+    "print(f\"SPO & sym intd: {xss.mean()} +/- {xss.std()}\")\n",
+    "xsa = np.array([8.8781, 8.1814, 7.7326, 7.6505, 9.0112, 9.2008, 9.3887, 8.7232, 8.6073, 8.6073])\n",
+    "print(f\"SPO & asym intd: {xsa.mean()} +/- {xsa.std()}\")\n",
+    "xan = np.array([4.4482, 4.1223, 4.1533, 3.9876, 4.9809, 5.6577, 5.2432, 4.4143, 4.7514, 4.7514])\n",
+    "print(f\"adv SPO & no intd: {xan.mean()} +/- {xan.std()}\")\n",
+    "xas = np.array([7.1498, 7.0349, 6.6749, 6.4627, 7.7634, 7.8205, 7.8618, 7.0229, 7.4465, 7.4465])\n",
+    "print(f\"adv SPO & sym intd: {xas.mean()} +/- {xas.std()}\")\n",
+    "xaa = np.array([7.7773, 7.4520, 7.1286, 6.9911, 8.1931, 8.4785, 8.4053, 7.7172, 7.9356, 7.9356])\n",
+    "print(f\"adv SPO & asym intd: {xaa.mean()} +/- {xaa.std()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xon = 4.2703 + 3.9413 + 4.0144 + 3.8332 + 4.7098 + 5.4733 + 5.0940 + 4.2866 + 4.6499 + 4.6499\n",
+    "print(f\"Oracle & no intd.: {xon}\")\n",
+    "xos = 6.8659 + 6.7464 + 6.4299 + 6.1716 + 7.4298 + 7.5481 + 6.9647 + 6.6544 + 7.2118 + 7.2118\n",
+    "print(f\"Oracle & sym intd: {xos}\")\n",
+    "xoa = 6.8728 + 7.2865 + 6.9242 + 6.1716 + 7.4298 + 7.5481 + 7.5056 + 6.6649 + 7.2118 + 7.2118\n",
+    "print(f\"Oracle & asym intd: {xoa}\")\n",
+    "xpn = 4.7798 + 4.1016 + 4.1909 + 4.2144 + 5.1734 + 6.0128 + 5.2856 + 4.8201 + 4.8097 + 4.8097\n",
+    "print(f\"PO & no intd: {xpn}\")\n",
+    "xps = 7.2351 + 6.9740 + 6.6728 + 6.6493 + 7.9041 + 8.2390 + 7.7915 + 7.1620 + 7.3979 + 7.3979\n",
+    "print(f\"PO & sym intd: {xps}\")\n",
+    "xpa = 8.0121 + 5.7358 + 6.9242 + 7.1088 + 8.3745 + 9.1074 + 8.2071 + 7.9188 + 7.7143 + 7.7143\n",
+    "print(f\"PO & asym intd: {xpa}\")\n",
+    "xsn = 4.3636 + 4.0688 + 4.1207 + 3.9578 + 4.8607 + 5.5872 + 5.2111 + 4.3534 + 4.7325 + 4.7325\n",
+    "print(f\"SPO & no intd: {xsn}\")\n",
+    "xss = 7.4021 + 7.1997 + 6.7817 + 6.6076 + 7.9676 + 7.9900 + 8.0484 + 7.2554 + 7.6427 + 7.6427\n",
+    "print(f\"SPO & sym intd: {xss}\")\n",
+    "xsa = 8.8781 + 8.1814 + 7.7326 + 7.6505 + 9.0112 + 9.2008 + 9.3887 + 8.7232 + 8.6073 + 8.6073\n",
+    "print(f\"SPO & asym intd: {xsa}\")\n",
+    "xan = 4.4482 + 4.1223 + 4.1533 + 3.9876 + 4.9809 + 5.6577 + 5.2432 + 4.4143 + 4.7514 + 4.7514\n",
+    "print(f\"adv SPO & no intd: {xan}\")\n",
+    "xas = 7.1498 + 7.0349 + 6.6749 + 6.4627 + 7.7634 + 7.8205 + 7.8618 + 7.0229 + 7.4465 + 7.4465\n",
+    "print(f\"adv SPO & sym intd: {xas}\")\n",
+    "xaa = 7.7773 + 7.4520 + 7.1286 + 6.9911 + 8.1931 + 8.4785 + 8.4053 + 7.7172 + 7.9356 + 7.9356\n",
+    "print(f\"adv SPO & asym intd: {xaa}\")"
+   ]
   }
  ],
  "metadata": {
